--- a/index.html
+++ b/index.html
@@ -152,14 +152,35 @@ font-size: 0.8rem;
 /* Floating cigarette styles */
 #floating-cigarette {
     position: fixed;
-    width: 40px;
+    width: 30px;
     height: auto;
     z-index: 9999;
     cursor: pointer;
     transition: transform 0.3s ease;
+    opacity: 0.7;
 }
 #floating-cigarette:hover {
     transform: scale(1.1);
+    opacity: 1;
+}
+
+/* Mobile-specific styles */
+@media (max-width: 768px) {
+    #floating-cigarette {
+        width: 20px;
+    }
+    .links {
+        flex-direction: column;
+    }
+    .links a {
+        margin-bottom: 0.5rem;
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    .subtitle {
+        font-size: 0.9rem;
+    }
 }
 </style>
 </head>
@@ -245,12 +266,12 @@ function animateCigarette() {
     x += dx;
     y += dy;
 
-    if (x < 0 || x > window.innerWidth - 40) {
+    if (x < 0 || x > window.innerWidth - cigarette.width) {
         dx = -dx;
     }
 
-    if (y > window.innerHeight - 40) {
-        y = window.innerHeight - 40;
+    if (y > window.innerHeight - cigarette.height) {
+        y = window.innerHeight - cigarette.height;
         dy = -dy * 0.8;
     }
 
@@ -262,7 +283,10 @@ function animateCigarette() {
     requestAnimationFrame(animateCigarette);
 }
 
-animateCigarette();
+// Start animation after image is loaded
+cigarette.onload = () => {
+    animateCigarette();
+};
 
 cigarette.addEventListener('click', () => {
     window.open('https://www.ebay.com/itm/326218651412', '_blank');
